Bump padding to stop topic-name & button overlap (#29)
Resisting the temptation to make this more robust, in favour of shipping a fix

--- a/scss/_tags.scss
+++ b/scss/_tags.scss
@@ -89,7 +89,7 @@
 
 .n-content-tag__list-item--with-follow {
 	position: relative;
-	padding: 10px 80px 10px 0;
+	padding: 10px 110px 10px 0;
 	margin: 0 10px;
 	border-bottom: 1px solid getColor('warm-3');
 	min-height: 26px;
